# solo_scale

./: .env  App.tsx  CONVERSATION_LIFECYCLE_IMPLEMENTATION.md  DEPLOYMENT_QUICKSTART.md  DOCUMENT_EXTRACTION_QUICK_START.md  EXTRACT_MORTGAGE_DATA_EXAMPLE.md  FINAL_IMPLEMENTATION_SUMMARY.md  FRONTEND_BACKEND_ALIGNMENT.md  IMPLEMENTATION_COMPLETE.md  LAUNCH_READY.md  PHASE_3_COMPLETE.md  RAILWAY_DEPLOYMENT.md  README.md  api_spec.json  index.html  metadata.json  package-lock.json  package.json  railway.json  smoke-test.sh  test-api.js  types.d.ts  types.d.ts.map  types.ts  vercel.json  verify-production.js  vite.config.ts
backend/: .env  .env.example  API_QUICK_REFERENCE.md  MESSAGING_API_EXAMPLES.md  README.md  package-lock.json  package.json  tsconfig.json
components/: AgentCard.tsx  AutomationLog.tsx  ConversationControls.tsx  ConversationHistory.tsx  DocumentExtractor.tsx  DocumentUploader.tsx  ErrorBoundary.tsx  LeadReassignmentPanel.tsx  PartnerActivityDashboard.tsx  Sidebar.tsx  TeamPerformanceChart.tsx
contexts/: AgentContext.test.tsx  AgentContext.tsx
docs/: CODE_AUDIT_REPORT.md  DOCUMENT_EXTRACTION_GUIDE.md  MESSAGING_INTEGRATION_SUMMARY.md  PHASE_OUT_IMPLEMENTATION_GUIDE.md  README.md  SECURITY_IMPROVEMENTS_IMPLEMENTED.md
pages/: Dashboard.tsx  Documents.tsx  Leads.tsx  Settings.tsx  SpeedAgent.tsx
primus-os/: README.md  pyproject.toml  requirements.txt
primus-os/src/: main.py
primus-os/src/config/: settings.py
primus-os/src/core/: agents.py  commands.py  tasks.py
primus-os/src/utils/: helpers.py
primus-os/tests/: test_main.py
(+41 files in other folders)
